@@ -16,20 +16,24 @@ package com.google.devtools.build.lib.rules.java;
 
 import static com.google.common.base.Preconditions.checkNotNull;
 import static com.google.common.base.Preconditions.checkState;
+import static com.google.devtools.build.lib.actions.ParameterFile.ParameterFileType.UNQUOTED;
 import static com.google.devtools.build.lib.rules.java.JavaCompileActionBuilder.UTF8_ENVIRONMENT;
 import static java.nio.charset.StandardCharsets.ISO_8859_1;
-import static java.util.stream.Collectors.joining;
 
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Iterables;
 import com.google.common.collect.Sets;
+import com.google.devtools.build.lib.actions.AbstractAction;
+import com.google.devtools.build.lib.actions.ActionEnvironment;
 import com.google.devtools.build.lib.actions.ActionExecutionContext;
 import com.google.devtools.build.lib.actions.Artifact;
+import com.google.devtools.build.lib.actions.CommandLines;
+import com.google.devtools.build.lib.actions.CompositeRunfilesSupplier;
 import com.google.devtools.build.lib.actions.ExecutionRequirements;
 import com.google.devtools.build.lib.actions.ParamFileInfo;
-import com.google.devtools.build.lib.actions.ParameterFile.ParameterFileType;
+import com.google.devtools.build.lib.actions.RunfilesSupplier;
 import com.google.devtools.build.lib.actions.SpawnResult;
 import com.google.devtools.build.lib.analysis.FilesToRunProvider;
 import com.google.devtools.build.lib.analysis.RuleContext;
@@ -40,17 +44,15 @@ import com.google.devtools.build.lib.cmdline.Label;
 import com.google.devtools.build.lib.collect.nestedset.NestedSet;
 import com.google.devtools.build.lib.collect.nestedset.NestedSetBuilder;
 import com.google.devtools.build.lib.collect.nestedset.Order;
+import com.google.devtools.build.lib.rules.java.JavaCompileAction.ProgressMessage;
 import com.google.devtools.build.lib.rules.java.JavaConfiguration.JavaClasspathMode;
 import com.google.devtools.build.lib.rules.java.JavaPluginInfoProvider.JavaPluginInfo;
-import com.google.devtools.build.lib.skyframe.serialization.autocodec.AutoCodec;
 import com.google.devtools.build.lib.util.LazyString;
 import com.google.devtools.build.lib.util.Pair;
 import com.google.devtools.build.lib.vfs.PathFragment;
 import com.google.devtools.build.lib.view.proto.Deps;
 import java.io.IOException;
 import java.io.InputStream;
-import java.util.ArrayList;
-import java.util.Collection;
 import java.util.List;
 import java.util.function.Consumer;
 import javax.annotation.Nullable;
@@ -69,19 +71,21 @@ import javax.annotation.Nullable;
  */
 public class JavaHeaderCompileActionBuilder {
 
+  private static final ParamFileInfo PARAM_FILE_INFO =
+      ParamFileInfo.builder(UNQUOTED).setCharset(ISO_8859_1).build();
+
   private final RuleContext ruleContext;
 
   private Artifact outputJar;
   @Nullable private Artifact outputDepsProto;
   private ImmutableSet<Artifact> sourceFiles = ImmutableSet.of();
-  private final Collection<Artifact> sourceJars = new ArrayList<>();
+  private ImmutableList<Artifact> sourceJars = ImmutableList.of();
   private NestedSet<Artifact> classpathEntries = NestedSetBuilder.emptySet(Order.NAIVE_LINK_ORDER);
   private ImmutableList<Artifact> bootclasspathEntries = ImmutableList.of();
   @Nullable private Label targetLabel;
   @Nullable private String injectingRuleKind;
   private PathFragment tempDirectory;
   private StrictDepsMode strictJavaDeps = StrictDepsMode.OFF;
-  private boolean reduceClasspath = true;
   private NestedSet<Artifact> directJars = NestedSetBuilder.emptySet(Order.NAIVE_LINK_ORDER);
   private NestedSet<Artifact> compileTimeDependencyArtifacts =
       NestedSetBuilder.emptySet(Order.STABLE_ORDER);
@@ -138,9 +142,9 @@ public class JavaHeaderCompileActionBuilder {
   }
 
   /** Adds a jar archive of Java sources to compile. */
-  public JavaHeaderCompileActionBuilder addSourceJars(Collection<Artifact> sourceJars) {
+  public JavaHeaderCompileActionBuilder setSourceJars(ImmutableList<Artifact> sourceJars) {
     checkNotNull(sourceJars, "sourceJars must not be null");
-    this.sourceJars.addAll(sourceJars);
+    this.sourceJars = sourceJars;
     return this;
   }
 
@@ -196,12 +200,6 @@ public class JavaHeaderCompileActionBuilder {
     return this;
   }
 
-  /** Enables reduced classpaths. */
-  public JavaHeaderCompileActionBuilder setReduceClasspath(boolean reduceClasspath) {
-    this.reduceClasspath = reduceClasspath;
-    return this;
-  }
-
   /** Sets the javabase inputs. */
   public JavaHeaderCompileActionBuilder setAdditionalInputs(NestedSet<Artifact> additionalInputs) {
     checkNotNull(additionalInputs, "additionalInputs must not be null");
@@ -252,39 +250,53 @@ public class JavaHeaderCompileActionBuilder {
                 .getHeaderCompilerBuiltinProcessors()
                 .containsAll(plugins.processorClasses().toSet());
 
-    SpawnAction.Builder builder = new SpawnAction.Builder();
+    ActionEnvironment actionEnvironment =
+        ruleContext.getConfiguration().getActionEnvironment().addFixedVariables(UTF8_ENVIRONMENT);
 
-    builder.setEnvironment(
-        ruleContext.getConfiguration().getActionEnvironment().addFixedVariables(UTF8_ENVIRONMENT));
-
-    builder.setProgressMessage(
+    LazyString progressMessage =
         new ProgressMessage(
-            this.outputJar, sourceFiles.size() + sourceJars.size(), plugins.processorClasses()));
+            /* prefix= */ "Compiling Java headers",
+            /* output= */ outputJar,
+            /* sourceFiles= */ sourceFiles,
+            /* sourceJars= */ sourceJars,
+            /* plugins= */ plugins);
 
-    builder.addTransitiveTools(toolsJars);
+    NestedSet<Artifact> outputs =
+        NestedSetBuilder.create(Order.STABLE_ORDER, outputJar, outputDepsProto);
 
-    builder.addOutput(outputJar);
-    builder.addOutput(outputDepsProto);
+    NestedSetBuilder<Artifact> mandatoryInputs =
+        NestedSetBuilder.<Artifact>stableOrder()
+            .addTransitive(additionalInputs)
+            .addAll(bootclasspathEntries)
+            .addAll(sourceJars)
+            .addAll(sourceFiles)
+            .addTransitive(toolsJars);
 
-    builder.addTransitiveInputs(additionalInputs);
-    builder.addInputs(bootclasspathEntries);
-    builder.addInputs(sourceJars);
-    builder.addInputs(sourceFiles);
-
+    ImmutableList<RunfilesSupplier> runfilesSuppliers = ImmutableList.of();
     FilesToRunProvider headerCompiler =
         useHeaderCompilerDirect
             ? javaToolchain.getHeaderCompilerDirect()
             : javaToolchain.getHeaderCompiler();
     // The header compiler is either a jar file that needs to be executed using
     // `java -jar <path>`, or an executable that can be run directly.
+    CustomCommandLine executableLine;
     if (!headerCompiler.getExecutable().getExtension().equals("jar")) {
-      builder.setExecutable(headerCompiler);
+      runfilesSuppliers = ImmutableList.of(headerCompiler.getRunfilesSupplier());
+      mandatoryInputs.addTransitive(headerCompiler.getFilesToRun());
+      executableLine =
+          CustomCommandLine.builder().addExecPath(headerCompiler.getExecutable()).build();
     } else {
-      builder.addTransitiveInputs(hostJavabase.javaBaseInputsMiddleman());
-      builder.setJarExecutable(
-          hostJavabase.javaBinaryExecPath(),
-          headerCompiler.getExecutable(),
-          javaToolchain.getJvmOptions());
+      mandatoryInputs
+          .addTransitive(hostJavabase.javaBaseInputsMiddleman())
+          .add(headerCompiler.getExecutable());
+      executableLine =
+          CustomCommandLine.builder()
+              .addPath(hostJavabase.javaBinaryExecPath())
+              .add("-Xverify:none")
+              .addAll(javaToolchain.getJvmOptions())
+              .add("-jar")
+              .addExecPath(headerCompiler.getExecutable())
+              .build();
     }
 
     CustomCommandLine.Builder commandLine =
@@ -317,14 +329,17 @@ public class JavaHeaderCompileActionBuilder {
 
     JavaConfiguration javaConfiguration =
         ruleContext.getConfiguration().getFragment(JavaConfiguration.class);
-    if (javaConfiguration.getReduceJavaClasspath() == JavaClasspathMode.BAZEL) {
+    ImmutableMap<String, String> executionInfo = ImmutableMap.of();
+    Consumer<Pair<ActionExecutionContext, List<SpawnResult>>> resultConsumer = null;
+    JavaClasspathMode classpathMode = javaConfiguration.getReduceJavaClasspath();
+    if (classpathMode == JavaClasspathMode.BAZEL) {
       if (javaConfiguration.inmemoryJdepsFiles()) {
-        builder.setExecutionInfo(
+        executionInfo =
             ImmutableMap.of(
                 ExecutionRequirements.REMOTE_EXECUTION_INLINE_OUTPUTS,
-                outputDepsProto.getExecPathString()));
+                outputDepsProto.getExecPathString());
       }
-      builder.addResultConsumer(createResultConsumer(outputDepsProto));
+      resultConsumer = createResultConsumer(outputDepsProto);
     }
 
     if (useDirectClasspath) {
@@ -334,17 +349,35 @@ public class JavaHeaderCompileActionBuilder {
       } else {
         classpath = classpathEntries;
       }
-      builder.addTransitiveInputs(classpath);
+      mandatoryInputs.addTransitive(classpath);
 
       commandLine.addExecPaths("--classpath", classpath);
-      commandLine.add("--nojavac_fallback");
+      commandLine.add("--noreduce_classpath");
 
       ruleContext.registerAction(
-          builder
-              .addCommandLine(
-                  commandLine.build(), ParamFileInfo.builder(ParameterFileType.UNQUOTED).build())
-              .setMnemonic("Turbine")
-              .build(ruleContext));
+          new SpawnAction(
+              /* owner= */ ruleContext.getActionOwner(),
+              /* tools= */ ImmutableList.of(),
+              /* inputs= */ mandatoryInputs.build(),
+              /* outputs= */ outputs,
+              /* primaryOutput= */ outputJar,
+              /* resourceSet= */ AbstractAction.DEFAULT_RESOURCE_SET,
+              /* commandLines= */ CommandLines.builder()
+                  .addCommandLine(executableLine)
+                  .addCommandLine(commandLine.build(), PARAM_FILE_INFO)
+                  .build(),
+              /* commandLineLimits= */ ruleContext.getConfiguration().getCommandLineLimits(),
+              /* isShellCommand= */ false,
+              /* env= */ actionEnvironment,
+              /* executionInfo= */ ruleContext
+                  .getConfiguration()
+                  .modifiedExecutionInfo(executionInfo, "Turbine"),
+              /* progressMessage= */ progressMessage,
+              /* runfilesSupplier= */ CompositeRunfilesSupplier.fromSuppliers(runfilesSuppliers),
+              /* mnemonic= */ "Turbine",
+              /* executeUnconditionally= */ false,
+              /* extraActionInfoSupplier= */ null,
+              /* resultConsumer= */ resultConsumer));
       return;
     }
 
@@ -352,15 +385,12 @@ public class JavaHeaderCompileActionBuilder {
     // flags needed for the javac-based header compiler implementations that supports
     // annotation processing.
 
-    builder.addTransitiveInputs(classpathEntries);
     if (!useHeaderCompilerDirect) {
-      builder.addTransitiveInputs(plugins.processorClasspath());
-      builder.addTransitiveInputs(plugins.data());
+      mandatoryInputs.addTransitive(plugins.processorClasspath());
+      mandatoryInputs.addTransitive(plugins.data());
     }
-    builder.addTransitiveInputs(compileTimeDependencyArtifacts);
+    mandatoryInputs.addTransitive(compileTimeDependencyArtifacts);
 
-    commandLine.addExecPaths("--classpath", classpathEntries);
-    commandLine.addAll("--processors", plugins.processorClasses());
     commandLine.addAll(
         "--builtin_processors",
         Sets.intersection(
@@ -372,23 +402,67 @@ public class JavaHeaderCompileActionBuilder {
     }
     if (strictJavaDeps != StrictDepsMode.OFF) {
       commandLine.addExecPaths("--direct_dependencies", directJars);
-      if (!compileTimeDependencyArtifacts.isEmpty()) {
-        commandLine.addExecPaths("--deps_artifacts", compileTimeDependencyArtifacts);
-      }
     }
-    if (reduceClasspath && strictJavaDeps != StrictDepsMode.OFF) {
+
+    if (javaConfiguration.experimentalJavaHeaderInputPruning()) {
+      ruleContext.registerAction(
+          new JavaCompileAction(
+              /* compilationType= */ JavaCompileAction.CompilationType.TURBINE,
+              /* owner= */ ruleContext.getActionOwner(),
+              /* env= */ actionEnvironment,
+              /* tools= */ toolsJars,
+              /* runfilesSupplier= */ CompositeRunfilesSupplier.fromSuppliers(runfilesSuppliers),
+              /* progressMessage= */ progressMessage,
+              /* mandatoryInputs= */ mandatoryInputs.build(),
+              /* transitiveInputs= */ classpathEntries,
+              /* directJars= */ directJars,
+              /* outputs= */ outputs,
+              /* executionInfo= */ executionInfo,
+              /* extraActionInfoSupplier= */ null,
+              /* executableLine= */ executableLine,
+              /* flagLine= */ commandLine.build(),
+              /* configuration= */ ruleContext.getConfiguration(),
+              /* dependencyArtifacts= */ compileTimeDependencyArtifacts,
+              /* outputDepsProto= */ outputDepsProto,
+              /* classpathMode= */ classpathMode));
+      return;
+    }
+
+    mandatoryInputs.addTransitive(classpathEntries);
+    commandLine.addExecPaths("--classpath", classpathEntries);
+    if (strictJavaDeps != StrictDepsMode.OFF && !compileTimeDependencyArtifacts.isEmpty()) {
+      commandLine.addExecPaths("--deps_artifacts", compileTimeDependencyArtifacts);
+    }
+    if (classpathMode != JavaClasspathMode.OFF && strictJavaDeps != StrictDepsMode.OFF) {
       commandLine.add("--reduce_classpath");
     } else {
       commandLine.add("--noreduce_classpath");
     }
 
     ruleContext.registerAction(
-        builder
-            .addCommandLine(
-                commandLine.build(),
-                ParamFileInfo.builder(ParameterFileType.UNQUOTED).setCharset(ISO_8859_1).build())
-            .setMnemonic("JavacTurbine")
-            .build(ruleContext));
+        new SpawnAction(
+            /* owner= */ ruleContext.getActionOwner(),
+            /* tools= */ ImmutableList.of(),
+            /* inputs= */ mandatoryInputs.build(),
+            /* outputs= */ outputs,
+            /* primaryOutput= */ outputJar,
+            /* resourceSet= */ AbstractAction.DEFAULT_RESOURCE_SET,
+            /* commandLines= */ CommandLines.builder()
+                .addCommandLine(executableLine)
+                .addCommandLine(commandLine.build(), PARAM_FILE_INFO)
+                .build(),
+            /* commandLineLimits= */ ruleContext.getConfiguration().getCommandLineLimits(),
+            /* isShellCommand= */ false,
+            /* env= */ actionEnvironment,
+            /* executionInfo= */ ruleContext
+                .getConfiguration()
+                .modifiedExecutionInfo(executionInfo, "JavacTurbine"),
+            /* progressMessage= */ progressMessage,
+            /* runfilesSupplier= */ CompositeRunfilesSupplier.fromSuppliers(runfilesSuppliers),
+            /* mnemonic= */ "JavacTurbine",
+            /* executeUnconditionally= */ false,
+            /* extraActionInfoSupplier= */ null,
+            /* resultConsumer= */ resultConsumer));
   }
 
   /**
@@ -417,34 +491,5 @@ public class JavaHeaderCompileActionBuilder {
         // an appropriate error then.
       }
     };
-  }
-
-  /** Static class to avoid keeping a reference to this builder after build() is called. */
-  @AutoCodec.VisibleForSerialization
-  @AutoCodec
-  static class ProgressMessage extends LazyString {
-
-    private final Artifact outputJar;
-    private final int fileCount;
-    private final NestedSet<String> processorClasses;
-
-    public ProgressMessage(Artifact outputJar, int fileCount, NestedSet<String> processorClasses) {
-      this.outputJar = outputJar;
-      this.fileCount = fileCount;
-      this.processorClasses = processorClasses;
-    }
-
-    @Override
-    public String toString() {
-      return String.format(
-          "Compiling Java headers %s (%d files)%s",
-          outputJar.prettyPrint(),
-          fileCount,
-          processorClasses.isEmpty()
-              ? ""
-              : processorClasses.toList().stream()
-                  .map(name -> name.substring(name.lastIndexOf('.') + 1))
-                  .collect(joining(", ", " and running annotation processors (", ")")));
-    }
   }
 }
